--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,7 +47,8 @@ javac.classpath=\
     ${file.reference.poi-excelant-3.15.jar}:\
     ${file.reference.poi-ooxml-3.15.jar}:\
     ${file.reference.poi-ooxml-schemas-3.15.jar}:\
-    ${file.reference.poi-scratchpad-3.15.jar}
+    ${file.reference.poi-scratchpad-3.15.jar}:\
+    ${libs.ApachePOI.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
