--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -66,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=attendance.Input
+main.class=attendance.CheckIn
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
