--- a/ApachePOI/nblibraries.properties
+++ b/ApachePOI/nblibraries.properties
@@ -4,7 +4,9 @@ libs.ApachePOI.classpath=\
     ${base}/ApachePOI/poi-excelant-3.15.jar;\
     ${base}/ApachePOI/poi-ooxml-3.15.jar;\
     ${base}/ApachePOI/poi-ooxml-schemas-3.15.jar;\
-    ${base}/ApachePOI/poi-scratchpad-3.15.jar
+    ${base}/ApachePOI/poi-scratchpad-3.15.jar;\
+    ${base}/ApachePOI/xmlbeans-2.6.0.jar;\
+    ${base}/ApachePOI/commons-collections4-4.1.jar
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
